"lib/ChangeLog"

2006-09-13	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-16:
	  Added an alternator-lock that passes one of several
		sources through in round-robin order (alternation).  
		This will be the basis for alternator merges.  
	  Updated the reset initial phase of alternator-eaters to 
		work with environment resets in general.
	  Also updated initial reset phase of alternating splitters.  
	  Added binary alternating split tree definition.
	  Next: finish alternating merger, construct tree FIFO.  


	* HACKT-00-01-04-main-00-80-15:
	  env.hac: CMOS sources now work for all N > 0, 
		except that for N==2, need inactive R.e on reset.
	  Added more test cases, and removed some useless ones.  


2006-09-12	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-14:
	  New alternator cells, many tested.


2006-09-11	Sandra Jackson	<sjj3@cornell.edu>

	* HACKT-00-01-04-main-00-80-12:
	  alternator.hac: Added draft of alternating token-eater 'alt'.


2006-09-06	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-10:
	  Added: "alternator.hac" base definitions for template cells to 
		be used in counters and alternators.  
	  env.hac: defined CMOS-implementable sources for environment
		using new (CMOS) alternator cells.
		Rewrote bitbuckets to be CMOS implementable.  
	  New and revised definitions have been tested in test/lib.


2006-09-02	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-07:
	  Added copy.hac: unbuffered wire-copies.
	  Added sync.hac: synchronization primitives, both unbuffered
		and weak-condition half-buffered.  
	  None are tested yet.  


2006-08-09	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-79-54:
	  mk/ Makefiles now have hackt cflat-lvs (.lvsprs) rules.


2006-08-07	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-79-53:
	  Fixed acknowledge of inactive_reset_bitbucket_a1ofN.

