@@ -1,0 +1,6 @@
+# "alternator-wchb_merge-01.prsimrc"
+#	$Id: alternator-wchb_merge-01.prsimrc,v 1.1 2006/09/14 22:07:19 fang Exp $
+# @haco@ alternator-wchb_merge-01.haco-a
+
+source stable-test-medium.prsimrc
+
