@@ -1,0 +1,14 @@
+// "alternator-wchb_merge-03.hac"
+
+import "alternator.hac";
+import "env.hac";
+
+e1of1 L[8];
+e1of1 R;
+bool _Reset, Reset;
+wchb_alternator_merge_2_tree<3> X(L, R, _Reset, Reset);
+source_e<1,1,{0}> s[8];
+(;i:8:	s[i](L[i], _Reset);	)
+inactive_reset_bitbucket_e1of<1>
+	b(R, _Reset);
+
