@@ -1,5 +1,11 @@
 "lib/ChangeLog"
 
+2006-09-14	David Fang	<fangism@users.sourceforce.net>
+
+	* HACKT-00-01-04-main-00-80-17:
+	  alternator.hac: Working, but slow, merge alternator, tested.
+
+
 2006-09-13	David Fang	<fangism@users.sourceforce.net>
 
 	* HACKT-00-01-04-main-00-80-16:
